--- a/login.html
+++ b/login.html
@@ -15,18 +15,19 @@
     <div class = "MAIN">
       <div class = "header-logo">DOCKVILLE DAY AND NIGHT PARKING</div>
         <!-- login form -->
-        <div class="container-fluid">
+        <div class="container-fluid" id="login" name="login" action="#" onsubmit="return Validate(event)" method="POST">
           <div class="glass">
             <div class="loginform">
             <form>
           <div class="mb-3">
-            <label for="exampleInputEmail1" class="form-label">Email address</label>
-            <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
-            <!-- <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div> -->
+            <label for="email" class="form-label">Email address</label>
+            <input type="email" class="form-control" id="email" name="email" aria-describedby="emailHelp">
+            <span id="email-error"></span><!--to note the errors that should be looked out for-->
           </div>
           <div class="mb-3">
-            <label for="exampleInputPassword1" class="form-label">Password</label>
-            <input type="password" class="form-control" id="exampleInputPassword1">
+            <label for="password" class="form-label">Password</label>
+            <input type="password" class="form-control" id="password" name="password">
+            <span id="password-error"></span>
           </div>
           <!-- <div class="mb-3 form-check"> -->
             <!-- <input type="checkbox" class="form-check-input" id="exampleCheck1"> -->
@@ -43,6 +44,8 @@
         
     </div>
     <div class = "FOOTER"></div>
+    <script src="login.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
+    <script src="login.js"></script>              
   </body>
 </html>
