--- a/home.html
+++ b/home.html
@@ -21,7 +21,7 @@
           <div class="navbar-items" id="navbarNav">
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Home</a>
+                <a class="nav-link active" aria-current="page" href="home.css">Home</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#">about us</a>
@@ -33,8 +33,8 @@
               </li>  
                 <ul class="dropdown-menu">
                   <li><a class="dropdown-item" href="parkinglot.html">Parking lot</a></li>
-                  <li><a class="dropdown-item" href="#">Car tire clinic</a></li>
-                  <li><a class="dropdown-item" href="#">battery section</a></li>
+                  <li><a class="dropdown-item" href="cartireclinic.html">Car tire clinic</a></li>
+                  <li><a class="dropdown-item" href="batterysection.html">battery section</a></li>
                 </ul>` 
             </ul>
           </div>
